[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Landing.gd" type="Script" id=1]
[ext_resource path="res://assets/backgrounds/landing_background.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/sleepy-cat-font/SleepyCatRegular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[node name="Landing" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -534.0
margin_top = -297.0
margin_right = 544.0
margin_bottom = 309.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.5
margin_top = -38.5
margin_right = 74.5
margin_bottom = 38.5

[node name="SaveTheCats" type="Label" parent="VBoxContainer"]
margin_right = 149.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
text = "Save The Cats"

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 33.0
margin_right = 149.0
margin_bottom = 53.0
text = "Start"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 57.0
margin_right = 149.0
margin_bottom = 77.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
